<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/app_demo_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hckb_category_items_margin"
                android:hint="@string/app_demo_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hckb_category_items_margin"
                android:hint="@string/app_demo_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hckb_category_items_margin"
                android:hint="@string/app_demo_user_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userIdEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/hckb_category_items_margin"
                android:hint="@string/app_demo_company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/logout_if_necessary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Logout if necessary" />

    <FrameLayout
        android:id="@+id/saveUserDataButton"
        style="@style/Button">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.InButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

        <com.helpcrunch.library.utils.views.icon_progress.HcIconProgress
            android:id="@+id/saveUserDataButtonIcon"
            style="@style/HcProgressBar.White"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/ic_save" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/logoutButton"
        style="@style/Button.Logout">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.InButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout" />

        <com.helpcrunch.library.utils.views.icon_progress.HcIconProgress
            android:id="@+id/logoutButtonIcon"
            style="@style/HcProgressBar.White"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/ic_exit" />
    </FrameLayout>

</LinearLayout>
